# distributed-job-queue

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  config.example.yaml  design-notes.md  docker-compose.yml  prompts.md  requirements.md  tech-stack.md  vcpkg.json
.github/workflows/: ci.yml  deploy.yml  terraform.yml
cmake/: toolchain-macos.cmake
db/migrations/: V1__create_queues_table.sql  V2__create_workers_table.sql  V3__create_jobs_table.sql  V4__create_job_events_table.sql  V5__seed_default_queue.sql
docker/: Dockerfile.server  Dockerfile.worker
docs/: activity.md  performance.md  test-results.md
grafana/provisioning/dashboards/: dashboard.yml  jq-dashboard.json
k8s/: configmap.yaml  namespace.yaml  secret.yaml
k8s/server/: deployment.yaml  hpa.yaml  pdb.yaml  service.yaml
k8s/worker/: deployment.yaml  hpa.yaml  pdb.yaml
prometheus/: alerts.yaml  prometheus.yml
proto/: admin_service.proto  common.proto  job_service.proto  worker_service.proto
scripts/: gen_perf_charts.py
src/common/config/: config.cc  config.h  flags.h
src/common/db/: connection_pool.cc  connection_pool.h  migrations.cc  migrations.h  repository.cc  repository.h
src/common/kafka/: kafka_consumer.cc  kafka_consumer.h  kafka_producer.cc  kafka_producer.h
src/common/logging/: logger.cc  logger.h
src/common/metrics/: metrics.cc  metrics.h
src/common/redis/: redis_client.cc  redis_client.h
src/ctl/: client.cc  client.h  main.cc
src/ctl/commands/: commands.h  jobs.cc  queues.cc  system.cc  workers.cc
src/ctl/output/: formatter.cc  formatter.h
src/server/: main.cc
src/server/db/: job_repository.cc  job_repository.h  queue_repository.cc  queue_repository.h  worker_repository.cc  worker_repository.h
src/server/grpc/: admin_service_impl.cc  admin_service_impl.h  job_service_impl.cc  job_service_impl.h  server.cc  server.h  worker_service_impl.cc  worker_service_impl.h
src/server/health/: health_server.cc  health_server.h
src/server/scheduler/: scheduler.cc  scheduler.h  worker_registry.cc  worker_registry.h
src/worker/: job_executor.cc  job_executor.h  main.cc  worker.cc  worker.h
tasks/: todo.md
terraform/: backend.tf  ecr.tf  eks.tf  elasticache.tf  iam.tf  msk.tf  outputs.tf  providers.tf  rds.tf  secrets.tf  security_groups.tf  variables.tf  vpc.tf
tests/: CMakeLists.txt
tests/integration/: e2e_test.cc
tests/perf/: throughput_test.sh
tests/unit/config/: config_test.cc
tests/unit/db/: migration_test.cc
tests/unit/kafka/: kafka_delivery_test.cc
tests/unit/redis/: distributed_lock_test.cc
tests/unit/server/: admin_service_test.cc  job_service_test.cc  scheduler_test.cc
